# LLM-For-Unstructured-Medical-Text

./: .gitignore  DeBai.txt  README.md  clinical_nlp_pipeline.py  how_to_run_llm.txt  medical_clinical_nlp_pipeline_architecture_vi_revised.md  ontology_linking.py  pipeline_advanced_description.md  pyproject.toml
.codex-index/: index_meta.json  project_index.md
configs/: inference.yaml
output/: 1.json  10.json  100.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  25.json  26.json  28.json  29.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  5.json  50.json  51.json  (+51 more)
output_2/: 1.json  10.json  100.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+59 more)
output_2*/: 25.json  29.json
output_2x/: 2.json  20.json  21.json  22.json  23.json  24.json  26.json  27.json  28.json
output_one/: 1.json
output_rulecheck/: 1.json  4.json  5.json  7.json
output_tmp/: 13.json  17.json  2.json  21.json  22.json  23.json  24.json  27.json  28.json  3.json  30.json  4.json  7.json  8.json
scripts/: build_derived_ontology.py  build_ontology_index.py  doctor.py  download_ontologies.py  evaluate_outputs.py  inspect_input.py  (+4 more)
(+10 files in other folders)
